# loom

./: README.md  pyproject.toml
loom/: __init__.py  cascade.py  cli.py  detect.py  patchutils.py  report.py  strip.py  verify.py
tests/: test_cascade.py  test_strip_and_detect.py  test_verify.py
tests/fixtures/: 50_add_susfs_in_gki-android14-6.1.patch
