[project]
name = "susfs-loom"
version = "0.3.0"
description = "Resilient patch-engine for susfs4ksu kernel integration (Detect + Strip + Cascade tiers 0-2)"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
loom = "loom.cli:main"

[project.optional-dependencies]
tier2 = ["tree-sitter>=0.24", "tree-sitter-c>=0.23"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["loom"]
